Phase 0: address review findings
Incorporate fixes from three independent reviews:
- AgentResult now enforces the ERROR <=> error-present invariant and
  stopped() rejects ERROR (use failed()).
- Add tests: ToolUseBlock null-value handling, tool-only message text,
  AgentResult invariants, full Conversation coverage (snapshot isolation,
  defensive copy).
- Conversation.messages() single-copy; tidy imports; add Message.of(Role, List).
- Document shallow-copy semantics on ToolUseBlock.input / Goal.parameters.
- Build hardening: enforcer (Maven/Java min versions), reproducible-build
  timestamp, slf4j-simple test binding, Maven wrapper, CI permissions + ./mvnw.
- Docs: add KB/retrieval research subsection, soften unattributed claims,
  fix version Javadoc, align module tree and build command.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HgPncTwCg86JeasZ5R3X1Z